Fix inexplicable icon alignment issue

--- a/src/scss/_map.scss
+++ b/src/scss/_map.scss
@@ -11,6 +11,12 @@
   cursor: pointer;
 }
 
+.geolocate-control > a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .geolocate-control .icon-spinner, .geolocate-control.locating .icon-direction {
   display: none;
 }
