--- a/src/scss/_mobile-filmstrip.scss
+++ b/src/scss/_mobile-filmstrip.scss
@@ -28,6 +28,9 @@
     font-size: 24px;
     background-color: $dark-green;
     color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .filmstrip-toggle i {
@@ -76,6 +79,9 @@
     background-color: white;
     color: #666;
     margin: 10px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   .raster-type-labels span {
